# BotteDisqueCorde

./: .gitignore  .gitmodules  BotteDisqueCorde.sln  BotteDisqueCorde.vcxproj  BotteDisqueCorde.vcxproj.filters  CMakeLists.txt  build.sh  settings.ini  token.ini
.github/workflows/: build.yml  buildLinux.yml  buildMultiPlatform.yml  buildWindows.yml
BotteDisqueCorde/: BotteDisqueCorde.vcxproj  main.cpp
Headers/: Initialiser.hpp  MonitorIpBan.hpp  advancedFunction.hpp
Headers/Commands/: Amogus.hpp  Clear.hpp  Commands.hpp  Dice.hpp  Dm.hpp  Guess.hpp  ICommand.hpp  Invite.hpp  ListenToBanIp.hpp  Meme.hpp  Ping.hpp  Poll.hpp  Pressence.hpp  Reload.hpp  Say.hpp  Settings.hpp  Status.hpp  Stop.hpp  SuperAdmin.hpp  UnbanIp.hpp  Upload.hpp  Weather.hpp
Headers/PollManager/: Date.hpp  Poll.hpp  PollManager.hpp
Sources/: Initialiser.cpp  MonitorIpBan.cpp  advancedFunction.cpp  main.cpp
Sources/Commands/: Amogus.cpp  Clear.cpp  Dice.cpp  Dm.cpp  Guess.cpp  Invite.cpp  ListenToBanIp.cpp  Meme.cpp  Ping.cpp  Poll.cpp  Pressence.cpp  Reload.cpp  Say.cpp  Settings.cpp  Status.cpp  Stop.cpp  SuperAdmin.cpp  UnbanIp.cpp  Upload.cpp  Weather.cpp
Sources/PollManager/: Poll.cpp  PollManager.cpp
